# apimimic-cli

./: .gitignore  Cargo.toml  README.md  build.bat
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  ping.rs  server.rs  utils.rs
src/server/: mod.rs  proxy.rs  request.rs
