[package]
name = "apimimic_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apimimic"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
ureq = "2.7"
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.4"
base64 = "0.22"
