[package]
name = "apimimic_cli"
version = "1.0.42"
edition = "2021"

[[bin]]
name = "apimimic"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
ureq = "2.7"
directories = "5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.4"
base64 = "0.22"
bytes = "1.0"
